--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "path": "^0.12.7"
   },
   "scripts": {
     "start": "nodemon server.js"
